Added search functionality, constants.php

--- a/issues/000003.md
+++ b/issues/000003.md
@@ -1,8 +1,8 @@
 ---
-title: 'Artillery tanks are overpowered'
+title: 'Lack of proper team balancing'
 status: 'open'
 type: 'annoyance'
-game: 'bf1'
+game: 'bfv'
 date_opened: ''
 date_closed: ''
 ---
