--- a/issues/000002.md
+++ b/issues/000002.md
@@ -1,6 +1,8 @@
 ---
-title: 'Testing'
+title: 'No tank body costumization'
 status: 'open'
 type: 'annoyance'
 game: 'bfv'
+date_opened: '2018-12-04'
+date_closed: ''
 ---
