Added a few more test issues

--- a/issues/000002.md
+++ b/issues/000002.md
@@ -1,8 +1,10 @@
 ---
 title: 'No tank body costumization'
 status: 'open'
-type: 'annoyance'
+type: 'comingsoon'
 game: 'bfv'
 date_opened: '2018-12-04'
 date_closed: ''
+patch_opened: ''
+patch_closed: ''
 ---
