--- a/issues/000003.md
+++ b/issues/000003.md
@@ -1,8 +1,10 @@
 ---
-title: 'Lack of proper team balancing'
+title: 'No proper team balancing'
 status: 'open'
 type: 'annoyance'
 game: 'bfv'
 date_opened: ''
 date_closed: ''
+patch_opened: ''
+patch_closed: ''
 ---
