--- a/issues/000005.md
+++ b/issues/000005.md
@@ -1,7 +1,7 @@
 ---
-title: 'No proper anti-cheat'
+title: 'No downed teammate dragging'
 status: 'open'
-type: 'annoyance'
+type: 'comingsoon'
 game: 'bfv'
 date_opened: ''
 date_closed: ''
