--- a/issues/000007.md
+++ b/issues/000007.md
@@ -1,5 +1,5 @@
 ---
-title: 'No proper anti-cheat'
+title: 'Prevent being spotted by flare while indoors/underground'
 status: 'open'
 type: 'annoyance'
 game: 'bfv'
