--- a/issues/000008.md
+++ b/issues/000008.md
@@ -1,8 +1,8 @@
 ---
-title: 'Artillery vehicles are overpowered'
+title: 'Nerf the Type 2A'
 status: 'open'
 type: 'annoyance'
-game: 'bf1'
+game: 'bfv'
 date_opened: ''
 date_closed: ''
 patch_opened: ''
