Added issue view

--- a/issues/000004.md
+++ b/issues/000004.md
@@ -8,4 +8,4 @@ date_closed: ''
 patch_opened: ''
 patch_closed: ''
 ---
-[Reddit](https://www.reddit.com/r/BattlefieldV/comments/9nebvk/battlefield_v_reddit_amaa_on_fri_oct_12th_at_9am/e7n7xdy/)
+[Dice comment on Reddit](https://www.reddit.com/r/BattlefieldV/comments/9nebvk/battlefield_v_reddit_amaa_on_fri_oct_12th_at_9am/e7n7xdy/)
